src/objects/s4g_currencies__S4G_Config__c.object
<CustomObject>
    <description>Internal use for the S4G Currency Updater application.</description>
    <fields>
        <fullName>s4g_currencies__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Username__c</fullName>
        <label>Username</label>
        <type>Email</type>
    </fields>
    <label>S4G Config</label>
    <nameField>
        <displayFormat>S4G-{0000}</displayFormat>
        <label>S4G Config</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S4G Configs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>